spade-tests/src/snapshots/spade_tests__ast_lowering__no_mangle_on_struct_fields_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct T {
    #[no_mangle] x: bool,
}

error: Unexpected `#`, expected `Identifier`
  ┌─ testinput:2:5
  │
2 │     #[no_mangle] x: bool,
  │     ^ expected `Identifier`


